// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SceneStructurePrompt golden > leaves optional blocks out for the generic variant 1`] = `
{
  "system": "씬 요약(자유 산문)을 읽고, 요청된 구조 필드를 제안하라.
요약에 실제로 담긴 내용만 정리하고, 새 사건이나 인물을 지어내지 마라.
각 항목은 한 문장으로 짧게 쓰고, 요약이 뒷받침하지 못하는 키는 빈 값으로 남겨라.
출력은 한국어 JSON 객체만 허용한다. 요청된 키만 담아라.
요청 항목:
- endState (이 장면의 종료 지점): 이 장면이 멈추는 지점. 요약의 마지막 사건을 기준으로, 다음 장면이 이어받을 자리를 한 문장으로.",
  "user": "[씬 요약]
짧은 요약",
}
`;

exports[`SceneStructurePrompt golden > leaves optional blocks out for the generic variant 2`] = `
{
  "system": "씬 요약(자유 산문)을 읽고, 요청된 구조 필드를 제안하라.
요약에 실제로 담긴 내용만 정리하고, 새 사건이나 인물을 지어내지 마라.
각 항목은 한 문장으로 짧게 쓰고, 요약이 뒷받침하지 못하는 키는 빈 값으로 남겨라.
출력은 한국어 JSON 객체만 허용한다. 요청된 키만 담아라.
요청 항목:
",
  "user": "[씬 요약]
짧은 요약",
}
`;

exports[`SceneStructurePrompt golden > leaves optional blocks out for the generic variant 3`] = `
{
  "system": "씬 요약(자유 산문)을 읽고, 요청된 구조 필드를 제안하라.
요약에 실제로 담긴 내용만 정리하고, 새 사건이나 인물을 지어내지 마라.
각 항목은 한 문장으로 짧게 쓰고, 요약이 뒷받침하지 못하는 키는 빈 값으로 남겨라.
출력은 한국어 JSON 객체만 허용한다. 요청된 키만 담아라.
요청 항목:
- neededCanon (필요 설정): 이 장면이 전제하는 설정 사실을 짧은 문장 목록으로.
- purpose (목적): 이 장면이 이야기에서 해내야 하는 일 하나를 한 문장으로.",
  "user": "[이미 작성된 필드 — 이와 모순되지 않게 제안하라]
- 목적: 화해 시도
- 갈등: 자존심

[씬 요약]
하나가 준에게 편지를 건네고, 준은 그 자리에서 찢는다.",
}
`;

exports[`SceneStructurePrompt golden > leaves optional blocks out for the xs variant 1`] = `
{
  "system": "씬 요약을 구조화한다. JSON 객체만 출력: {"endState":""}.",
  "user": "짧은 요약",
}
`;

exports[`SceneStructurePrompt golden > leaves optional blocks out for the xs variant 2`] = `
{
  "system": "씬 요약을 구조화한다. JSON 객체만 출력: {}.",
  "user": "짧은 요약",
}
`;

exports[`SceneStructurePrompt golden > leaves optional blocks out for the xs variant 3`] = `
{
  "system": "씬 요약을 구조화한다. JSON 객체만 출력: {"neededCanon":[],"purpose":""}.",
  "user": "하나가 준에게 편지를 건네고, 준은 그 자리에서 찢는다.",
}
`;

exports[`SceneStructurePrompt golden > renders every block for the generic variant 1`] = `
{
  "system": "씬 요약(자유 산문)을 읽고, 요청된 구조 필드를 제안하라.
요약에 실제로 담긴 내용만 정리하고, 새 사건이나 인물을 지어내지 마라.
각 항목은 한 문장으로 짧게 쓰고, 요약이 뒷받침하지 못하는 키는 빈 값으로 남겨라.
출력은 한국어 JSON 객체만 허용한다. 요청된 키만 담아라.
요청 항목:
- purpose (목적): 이 장면이 이야기에서 해내야 하는 일 하나를 한 문장으로.
- conflict (갈등): 장면 안에서 맞부딪히는 욕구나 입장을 한 문장으로.
- twist (반전): 장면 끝에서 드러나는 전환이나 새 정보. 없으면 비워 두라.
- emotionalShift (감정 변화): 장면을 지나며 인물의 상태가 어떻게 달라지는지.
- endState (이 장면의 종료 지점): 이 장면이 멈추는 지점. 요약의 마지막 사건을 기준으로, 다음 장면이 이어받을 자리를 한 문장으로.
- foreshadowing (회수할 복선): 뒤에서 회수할 복선을 짧은 구 목록으로.
- neededCanon (필요 설정): 이 장면이 전제하는 설정 사실을 짧은 문장 목록으로.",
  "user": "[이미 작성된 필드 — 이와 모순되지 않게 제안하라]
- 목적: 화해 시도
- 갈등: 자존심

[씬 요약]
하나가 준에게 편지를 건네고, 준은 그 자리에서 찢는다.",
}
`;

exports[`SceneStructurePrompt golden > renders every block for the rich variant 1`] = `
{
  "system": "씬 요약(자유 산문)을 읽고, 요청된 구조 필드를 제안하라.
요약에 실제로 담긴 내용만 정리하고, 새 사건이나 인물을 지어내지 마라.
각 항목은 한 문장으로 짧게 쓰고, 요약이 뒷받침하지 못하는 키는 빈 값으로 남겨라.
출력은 한국어 JSON 객체만 허용한다. 요청된 키만 담아라.
요청 항목:
- purpose (목적): 이 장면이 이야기에서 해내야 하는 일 하나를 한 문장으로.
- conflict (갈등): 장면 안에서 맞부딪히는 욕구나 입장을 한 문장으로.
- twist (반전): 장면 끝에서 드러나는 전환이나 새 정보. 없으면 비워 두라.
- emotionalShift (감정 변화): 장면을 지나며 인물의 상태가 어떻게 달라지는지.
- endState (이 장면의 종료 지점): 이 장면이 멈추는 지점. 요약의 마지막 사건을 기준으로, 다음 장면이 이어받을 자리를 한 문장으로.
- foreshadowing (회수할 복선): 뒤에서 회수할 복선을 짧은 구 목록으로.
- neededCanon (필요 설정): 이 장면이 전제하는 설정 사실을 짧은 문장 목록으로.",
  "user": "[이미 작성된 필드 — 이와 모순되지 않게 제안하라]
- 목적: 화해 시도
- 갈등: 자존심

[씬 요약]
하나가 준에게 편지를 건네고, 준은 그 자리에서 찢는다.",
}
`;

exports[`SceneStructurePrompt golden > renders every block for the xs variant 1`] = `
{
  "system": "씬 요약을 구조화한다. JSON 객체만 출력: {"purpose":"","conflict":"","twist":"","emotionalShift":"","endState":"","foreshadowing":[],"neededCanon":[]}.",
  "user": "하나가 준에게 편지를 건네고, 준은 그 자리에서 찢는다.",
}
`;
